--- a/src/pages/Profile/Profile.module.css
+++ b/src/pages/Profile/Profile.module.css
@@ -1,7 +1,7 @@
 .wrapper {
   max-width: 1320px;
   margin: 0 auto;
-  min-height: calc(100vh - 70px);
+  min-height: calc(100vh + 70px);
 }
 
 .top {
