--- a/src/pages/RegistrationSuccess/RegistrationSuccess.module.css
+++ b/src/pages/RegistrationSuccess/RegistrationSuccess.module.css
@@ -1,7 +1,7 @@
 .wrapper {
   flex: 1;
   display: flex;
-  min-height: calc(100vh - 75px);
+  min-height: calc(100vh + 75px);
 }
 
 .left {
